testsuite/tests/typecheck/should_compile/T9497a.hs
main :: IO ()
main = _main
