testsuite/tests/typecheck/should_fail/T19397E2.hs

import T19397S

main :: IO ()
main = putStrLn "T19397E2"
